--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.4.0",
+    "contentful": "^9.1.3",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^7.0.9"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.4.1",
     "@types/react": "17.0.31",
+    "autoprefixer": "^10.3.7",
+    "daisyui": "^1.14.6",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.17",
     "typescript": "4.4.4"
   }
 }
